[package]
name = "mmheaps"
version = "0.1.1"
edition = "2021"
author = ["Skyler Selfridge <Skyler.Selfridge@gmail.com"]
description = "Simple implementation of iterable min and max heaps"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
